--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 													<p>
 														신뢰도 있는 의료정보 탐색을 위한 지역 기반 의료 서비스 매칭 플랫폼 웹&앱입니다.
 														병원을 검색해 온라인 예약, 게시판을 통한 커뮤니티 형성으로 의료정보를 공유할 수 있습니다.
+														기여도(45%)
 													</p>
 													
 												</a>
