포트폴리오 업데이트

--- a/index.html
+++ b/index.html
@@ -68,51 +68,51 @@
 									<ul class="feature-icons">
 										<li class="icon solid fa-code"><b>JAVA</b></li>
 										<p>원하는 기능을 구현하기 위해 예외 처리와 컬렉션 등 JAVA에서 제공하는 기본 기능을 적절히 사용할 수 있습니다.</p>
-										<li class="icon solid fa-cubes"><b>JSP</b></li>
+										<li class="icon solid fa-code"><b>JSP</b></li>
 										<p>Model1, Model2 방식을 이해하고 Model2 방식을 기반으로  자바 빈을 이용하여 동적인 웹페이지를 만들 수 있습니다. EL과 JSTL 태그를 사용해 코드를 간결히 작성할 수 있습니다.</p>
-										<li class="icon solid fa-book"><b>Spring</b></li>
+										<li class="icon solid fa-code"><b>Spring</b></li>
 										<p>DI, IoC 개념을 알고 있으며 로깅 기능을 분리하는 AOP 프로그래밍을 해 본 경험이 있습니다.</p>
-										<li class="icon solid fa-coffee"><b>Spring Boot</b></li>
+										<li class="icon solid fa-code"><b>Spring Boot</b></li>
 										<p>MyBatis를 이용해 SpringMVC 패턴을 적용한 동적 웹 페이지를 제작할 수 있습니다. JPA를 이용한 ORM 구현에 대해 알고 있습니다.</p>
 									</ul>
 									<hr>
 									<h4>FrontEnd</h4>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">HTML5</li>
-										<li class="icon solid fa-cubes">CSS3</li>
-										<li class="icon solid fa-book">JavaScript</li>
-										<li class="icon solid fa-coffee">React</li>
+										<li class="icon solid fa-code">CSS3</li>
+										<li class="icon solid fa-code">JavaScript</li>
+										<li class="icon solid fa-code">React</li>
 									</ul>
 									<hr>
 									<h4>Mobile</h4>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Flutter</li>
-										<li class="icon solid fa-cubes">Android Studio</li>
+										<li class="icon solid fa-code">Android Studio</li>
 									</ul>
 									<hr>
 									<h4>DBMS</h4>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Oracle</li>
-										<li class="icon solid fa-cubes">MySQL</li>
-										<li class="icon solid fa-book">Firebase</li>
+										<li class="icon solid fa-code">MySQL</li>
+										<li class="icon solid fa-code">Firebase</li>
 									</ul>
 									<hr>
 									<h4>Server</h4>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">AWS</li>
-										<li class="icon solid fa-cubes">Tomcat</li>
+										<li class="icon solid fa-code">Tomcat</li>
 									</ul>
 									<hr>
 									<h4>Tools</h4>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Eclipse</li>
-										<li class="icon solid fa-cubes">VSCode</li>
-										<li class="icon solid fa-book">Spring Tool Suite</li>
-										<li class="icon solid fa-coffee">HeidiSQL</li>
-										<li class="icon solid fa-bolt">SQL developer</li>
-										<li class="icon solid fa-users">VirtualBox</li>
-										<li class="icon solid fa-users">VMware</li>
-										<li class="icon solid fa-users">Git & GitHub</li>
+										<li class="icon solid fa-code">VSCode</li>
+										<li class="icon solid fa-code">Spring Tool Suite</li>
+										<li class="icon solid fa-code">HeidiSQL</li>
+										<li class="icon solid fa-code">SQL developer</li>
+										<li class="icon solid fa-code">VirtualBox</li>
+										<li class="icon solid fa-code">VMware</li>
+										<li class="icon solid fa-code">Git & GitHub</li>
 									</ul>
 								</div>
 							</section>
@@ -123,30 +123,42 @@
 									<h3 class="nav_title">Project</h3><br/>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/doctorview.png" alt="" /></a>
+											<a href="https://github.com/Budayeong/DoctorViewWeb" class="image"><img src="images/doctorview.png" alt="" /></a>
 											<div class="inner">
 												<a href="https://github.com/Budayeong/DoctorViewWeb">
 													<h4>닥터뷰</h4>
-													<p>2024.09.19 - 2024.10.23 | 팀 프로젝트 (3인) </p>
-													<p>
+													<p class="date">2024.09.19 - 2024.10.23 &nbsp;|&nbsp;  팀 프로젝트 (3인)  &nbsp;|&nbsp;  <span>기여도 45%</span></p>
+													<p class="description">
 														신뢰도 있는 의료정보 탐색을 위한 지역 기반 의료 서비스 매칭 플랫폼 웹&앱입니다.<br/>
 														병원을 검색해 온라인 예약, 게시판을 통한 커뮤니티 형성으로 의료정보를 공유할 수 있습니다.<br/>
 														기여도(45%)
 													</p>
-													
 												</a>
 											</div>
 										</article>
 										<article>
 											<a href="https://github.com/yum-recipe-project/zipmin" class="image"><img src="images/zipmin.png" alt="" /></a>
 											<div class="inner">
-												<h4>집밥의 민족</h4>
-												<p>2025.02.07 - 진행 중 | 팀 프로젝트 (2인) </p>
-												<p>
-													음식 레시피 추천 웹 개발 프로젝트입니다.<br/>
-													다양한 카테고리와 등급에 따라 원하는 난이도의 레시피를 검색할 수 있습니다.<br/>
-													또한 나의 냉장고 기능을 통해 실제 냉장고의 재료들을 관리할 수 있습니다.
-												</p>
+												<a href="https://github.com/yum-recipe-project/zipmin">
+													<h4>집밥의 민족</h4>
+													<p class="date">2025.02.07 - 진행 중 | 팀 프로젝트 (2인) </p>
+													<p class="description">
+														음식 레시피 추천 웹 개발 프로젝트입니다.<br/>
+														다양한 카테고리와 등급에 따라 원하는 난이도의 레시피를 검색할 수 있습니다.<br/>
+														또한 나의 냉장고 기능을 통해 실제 냉장고의 재료들을 관리할 수 있습니다.<br/>
+														<span>* 현재 웹 프론트 디자인 구현 중입니다.</span>
+													</p>
+												</a>
+											</div>
+											<div class="project_etc">
+												<div class="page">
+													<p>home 페이지</p>
+													<img src="images/index.png" alt="" />
+												</div>
+												<div class="page">
+													<p>나의 냉장고 관리 page</p>
+													<img src="images/fridge.png" alt="" />
+												</div>
 											</div>
 										</article>
 									</div>
